<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ShopMap</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_my_items">ItemsActivity</string>
    <string name="title_activity_recipe">RecipeActivity</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="search_hint">Search products...</string>
    <string name="show_items">Show Selected</string>
    <string name="clear_all">Clear All</string>
    <string name="go_map">Go To Map</string>
    <string name="recipe">Recipes</string>
    <string name="recipeText">Select one or more recipes:</string>
    <string name="done">ADD TO LIST OF ITEMS</string>

</resources>